Fix responsivity on mobile

--- a/styles/components/editor.css
+++ b/styles/components/editor.css
@@ -1,4 +1,5 @@
 .editor-container {
+    flex-direction: column;
     margin: 0 auto;
     padding: 2rem;
     background-color: var(--clr-primary-2);
